# adamantine

./: .clang-format  .codecov.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GEMINI.md  Gemfile  LICENSE.md  NIX.md  README.md  _config.yml  algorithmic_choice.md  flake.nix  governing_equations.md  indent  indent.sh  index.md  input_file.md  install.md  run.md  scan_path.md
.github/workflows/: Dockerfile  docker.yml  nix.yml
_include/: head.html
_includes/: head_custom.html
_sass/color_schemes/: wider.scss
_sass/custom/: custom.scss
application/: CMakeLists.txt  adamantine.cc  adamantine.cu  adamantine.hh  input.info
ci/: Dockerfile  address_blacklist.txt  jenkins_config  run_test.sh
cmake/: CodeCoverage.cmake  SetupAdamantine.cmake  SetupDealII.cmake  SetupTPLs.cmake  Setupadamantine.cmake  Testing.cmake  UnitTesting.cmake
doc/: CMakeLists.txt  Doxyfile.in  README.md  adamantine.tex  algorithmic_choice.md  changelog.md  data_assimilation.md  examples.md  governing_equations.md  heat_equation.md  input_file.md  install.md  material_deposition.md  references.md  run.md  scan_path.md  visualization.md
doc/examples/: bare_plate_l.md  data_assimilation.md  demo_316.md  hour_glass.md  performance_study.md  thermal_simulation.md
joss/: paper.bib  paper.md
nix/adamantine/: common.nix  v1.0.0.nix  v1.1.0.nix
nix/dependencies/: dealii.nix
nix/dependencies/adiak/: default.nix
nix/dependencies/arborx/: default.nix
nix/dependencies/caliper/: default.nix
nix/dependencies/dealii/: common.nix  v9.5.2.nix  v9.6.2.nix
nix/dependencies/sundials-mpi/: .default.nix.un~  default.nix
nix/nixpkgs/: config.nix
source/: ArrayMD.hh  BeamHeatSourceProperties.hh  BodyForce.cc  BodyForce.hh  Boundary.cc  Boundary.hh  CMakeLists.txt  ClosestSourcePointAdaptation.hh  CubeHeatSource.cc  CubeHeatSource.hh  DataAssimilator.cc  DataAssimilator.hh  ElectronBeam.cc  ElectronBeam.hh  ElectronBeam.templates.hh  ElectronBeamHeatSource.cc  ElectronBeamHeatSource.hh  ExperimentalData.hh  GaussianHeatSource.cc  GaussianHeatSource.hh  Geometry.cc  Geometry.hh  Geometry.templates.hh  GoldakHeatSource.cc  GoldakHeatSource.hh  HeatSource.cc  HeatSource.hh  HeatSources.hh  ImplicitOperator.cc  ImplicitOperator.hh  ImplicitOperator.templates.hh  MaterialProperty.cc  MaterialProperty.cu  MaterialProperty.hh  MaterialProperty.templates.hh  MaterialPropertyInstDev.cc  MaterialPropertyInstHost.cc  MaterialStates.hh  MechanicalOperator.cc  MechanicalOperator.hh  (+67 more)
tests/: CMakeLists.txt  main.cc  test_arraymd.cc  test_arraymd_device.cu  test_closest_source_point_adaptation.cc  test_data_assimilator.cc  test_electron_beam.cc  test_ensemble_management.cc  test_experimental_data.cc  test_geometry.cc  test_heat_source.cc  test_implicit_operator.cc  test_integration_2d  test_integration_2d.cc  test_integration_2d_device.cc  test_integration_2d_device.cu  test_integration_3d.cc  test_integration_3d_amr.cc  test_integration_3d_amr_device.cc  test_integration_3d_amr_device.cu  test_integration_3d_device.cc  test_integration_3d_device.cu  test_integration_da.cc  test_integration_da_augmented.cc  test_integration_thermoelastic.cc  test_material_deposition.cc  test_material_property.cc  test_material_property.hh  test_material_property_device.cc  test_material_property_device.cu  test_mechanical_operator.cc  test_mechanical_physics.cc  test_microstructure.cc  test_newton_solver.cc  test_parse_scan_path.cc  test_post_processor.cc  test_quaternion.cc  test_scan_path.cc  test_scan_path_parser.cc  test_thermal_operator.cc  (+9 more)
tests/data/: HourGlass_AOP.info  HourGlass_AOP.vtk  HourGlass_AOP_scan_path.txt  README.md  Simple_3D_ring.stl  amr_test.info  analytical_1D_transient.py  bare_plate_L_da.info  bare_plate_L_da_aug_ref_data_0_0.csv  bare_plate_L_da_aug_ref_data_0_1.csv  bare_plate_L_da_aug_ref_log.txt  bare_plate_L_da_augmented.info  bare_plate_L_ensemble.info  bare_plate_L_expt_data_0_0.csv  bare_plate_L_expt_data_0_1.csv  bare_plate_L_expt_log.txt  bare_plate_L_scan_path.txt  bare_plate_L_scan_path_fast.txt  beam_position.csv  convective_bc_gold.txt  demo_316_short.info  demo_316_short_amr.info  demo_316_short_anisotropic.info  demo_316_short_scan_path.txt  demo_316_short_scan_path_amr.txt  experiment_log_test.txt  experimental_data_0_0.csv  extruded_cube.msh  five_axis.info  five_axis_scan_path.txt  hexahedra.geo  hexahedra.msh  integration_2d.info  integration_2d_ensemble.info  integration_2d_gold.txt  integration_2d_units.info  integration_3d_gold.txt  integration_3d_gold_0.txt  integration_3d_gold_1.txt  integration_3d_gold_five_axis.txt  (+32 more)
